--- a/real-estate-html-template/signUp.ejs
+++ b/real-estate-html-template/signUp.ejs
@@ -65,13 +65,16 @@
                         <span class="details">Password</span>
                         <input type="text" name="password" placeholder="Enter your password" required>
                     </div>
-                    <div class="input-box">
+                    <!-- <div class="input-box">
                         <span class="details">Profile Picture</span>
                         <input type="file" name="profilePic" placeholder="Image" accept="image/*" required>
-                    </div>
+                    </div> -->
                 </div>
                 <div class="button">
                     <input type="submit" value="Register" id="registerButton">
+                </div>
+                <div class="input-box">
+                    <h5>Already Have Account?<a href="./login">Login Now</a></h5>
                 </div>
             </form>
         </div>
@@ -85,3 +88,6 @@
 </body>
 
 </html>
+
+
+
