--- a/real-estate-html-template/addProperty.ejs
+++ b/real-estate-html-template/addProperty.ejs
@@ -103,20 +103,19 @@
             </div>
             <div class="form-group">
                 <label for="description">City</label>
-                <!-- <input type="text" id="city" name="city" rows="4" required> -->
-                <select class="form-select border-0 py-3", name="city" required>
+                <select class="form-select border-0 py-3" name="city">
                     <option selected>Location</option>
-                    <option value="1">Gurgaon</option>
-                    <option value="2">Chennai</option>
-                    <option value="3">Mumbai</option>
-                    <option value="4">Bangalore</option>
-                    <option value="5">Pune</option>
-                    <option value="6">Hyderabad</option>
-                    <option value="7">Delhi</option>
-                    <option value="8">Noida</option>
-                    <option value="9">Greater_Noida</option>
-                    <option value="10">Ghaziabad</option>
-                    <option value="11">Fariadabad</option>
+                    <option value="Gurgaon">Gurgaon</option>
+                    <option value="Chennai">Chennai</option>
+                    <option value="Mumbai">Mumbai</option>
+                    <option value="Bangalore">Bangalore</option>
+                    <option value="Pune">Pune</option>
+                    <option value="Hyderabad">Hyderabad</option>
+                    <option value="Delhi">Delhi</option>
+                    <option value="Noida">Noida</option>
+                    <option value="Greater_Noida">Greater_Noida</option>
+                    <option value="Ghaziabad">Ghaziabad</option>
+                    <option value="Fariadabad">Fariadabad</option>
                 </select>
             </div>
             <div class="form-group">
@@ -130,6 +129,14 @@
             <div class="form-group">
                 <label for="description">Zip Code</label>
                 <input type="number" id="zipCode" name="zipCode" rows="4" required>
+            </div>
+            <div class="form-group">
+                <label for="description">Bed</label>
+                <input type="number" id="bed" name="bed" rows="4" required>
+            </div>
+            <div class="form-group">
+                <label for="description">Bath</label>
+                <input type="number" id="bath" name="bath" rows="4" required>
             </div>
             <div class="form-group">
                 <label for="description">Property Latitude</label>
