--- a/real-estate-html-template/signUp.ejs
+++ b/real-estate-html-template/signUp.ejs
@@ -65,10 +65,6 @@
                         <span class="details">Password</span>
                         <input type="text" name="password" placeholder="Enter your password" required>
                     </div>
-                    <!-- <div class="input-box">
-                        <span class="details">Profile Picture</span>
-                        <input type="file" name="profilePic" placeholder="Image" accept="image/*" required>
-                    </div> -->
                 </div>
                 <div class="button">
                     <input type="submit" value="Register" id="registerButton">
@@ -81,7 +77,7 @@
     </div>
     <script>
         document.getElementById("registerButton").addEventListener("click", function () {
-            window.location.href = "./login";
+            window.location.href = "./message";
         });
     </script>
 
