--- a/real-estate-html-template/displayPropertyDetails.ejs
+++ b/real-estate-html-template/displayPropertyDetails.ejs
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Makaan - Real Estate HTML Template</title>
+    <title>Makaan</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
@@ -14,8 +14,9 @@
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@400;500;600&family=Inter:wght@700;800&display=swap" rel="stylesheet">
-    
+    <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@400;500;600&family=Inter:wght@700;800&display=swap"
+        rel="stylesheet">
+
     <!-- Icon Font Stylesheet -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
@@ -34,7 +35,8 @@
 <body>
     <div class="container-xxl bg-white p-0">
         <!-- Spinner Start -->
-        <div id="spinner" class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center">
+        <div id="spinner"
+            class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center">
             <div class="spinner-border text-primary" style="width: 3rem; height: 3rem;" role="status">
                 <span class="sr-only">Loading...</span>
             </div>
@@ -47,7 +49,8 @@
             <nav class="navbar navbar-expand-lg bg-white navbar-light py-0 px-4">
                 <a href="./home?isUser=<%= encodeURIComponent(JSON.stringify(user)) %>" class="navbar-brand d-flex align-items-center text-center">
                     <div class="icon p-2 me-2">
-                        <img class="img-fluid" src="static/img/icon-deal.png" alt="Icon" style="width: 30px; height: 30px;">
+                        <img class="img-fluid" src="static/img/icon-deal.png" alt="Icon"
+                            style="width: 30px; height: 30px;">
                     </div>
                     <h1 class="m-0 text-primary">Makaan</h1>
                 </a>
@@ -56,8 +59,8 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarCollapse">
                     <div class="navbar-nav ms-auto">
-                        <a href="./home?isUser=<%= encodeURIComponent(JSON.stringify(user)) %>" class="nav-item nav-link">Home</a>
-                        <a href="" class="nav-item nav-link active">About</a>
+                        <a href="./home?isUser=<%= encodeURIComponent(JSON.stringify(user)) %>" class="nav-item nav-link active">Home</a>
+                        <a href="./about?isUser=<%= encodeURIComponent(JSON.stringify(user)) %>" class="nav-item nav-link">About</a>
                         <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Property</a>
                             <div class="dropdown-menu rounded-0 m-0">
@@ -67,116 +70,112 @@
                         </div>
                         <a href="./contact?isUser=<%= encodeURIComponent(JSON.stringify(user)) %>" class="nav-item nav-link">Contact</a>
                         <% if (user) { %>
-                            <a href="./getprofile" class="nav-item nav-link" id="display-user-details">Welcome, <%=
-                                    user.name%></a>
+                            <a href="./getprofile" class="nav-item nav-link">Welcome, <%= user.name %></a>
                             <% } %>
                     </div>
-                    <a href="./getUserProperty" class="btn btn-primary px-3 d-none d-lg-flex">Add Property</a>
+                    <!-- <a href="" class="btn btn-primary px-3 d-none d-lg-flex">Add Property</a> -->
                 </div>
             </nav>
         </div>
         <!-- Navbar End -->
 
 
-        <!-- Header Start -->
-        <div class="container-fluid header bg-white p-0">
-            <div class="row g-0 align-items-center flex-column-reverse flex-md-row">
-                <div class="col-md-6 p-5 mt-lg-5">
-                    <h1 class="display-5 animated fadeIn mb-4">About Us</h1> 
-                        <nav aria-label="breadcrumb animated fadeIn">
-                        <ol class="breadcrumb text-uppercase">
-                            <li class="breadcrumb-item"><a href="#">Home</a></li>
-                            <li class="breadcrumb-item"><a href="#">Pages</a></li>
-                            <li class="breadcrumb-item text-body active" aria-current="page">About</li>
-                        </ol>
-                    </nav>
-                </div>
-                <div class="col-md-6 animated fadeIn">
-                    <img class="img-fluid" src="static/img/header.jpg" alt="">
-                </div>
-            </div>
-        </div>
-        <!-- Header End -->
-
-
-        <!-- Search Start -->
-        <div class="container-fluid bg-primary mb-5 wow fadeIn" data-wow-delay="0.1s" style="padding: 35px;">
+        <!-- User Details Display Start  -->
+        <div class="container-xxl py-5">
             <div class="container">
-                <form action="/searchProperty" method="POST">
-                    <div class="row g-2">
-                        <div class="col-md-10">
-                            <div class="row g-2">
-                                <div class="col-md-4">
-                                    <select class="form-select border-0 py-3" name="property_type">
-                                        <option selected>Property Type</option>
-                                        <option value="Apartment">Apartment</option>
-                                        <option value="Villa">Villa</option>
-                                        <option value="Home">Home</option>
-                                        <option value="Office">Office</option>
-                                        <option value="Shop">Shop</option>
-                                    </select>
-                                </div>
-                                <div class="col-md-4">
-                                    <select class="form-select border-0 py-3" name="city">
-                                        <option selected>Location</option>
-                                        <option value="Gurgaon">Gurgaon</option>
-                                        <option value="Chennai">Chennai</option>
-                                        <option value="Mumbai">Mumbai</option>
-                                        <option value="Bangalore">Bangalore</option>
-                                        <option value="Pune">Pune</option>
-                                        <option value="Hyderabad">Hyderabad</option>
-                                        <option value="Delhi">Delhi</option>
-                                        <option value="Noida">Noida</option>
-                                        <option value="Greater_Noida">Greater_Noida</option>
-                                        <option value="Ghaziabad">Ghaziabad</option>
-                                        <option value="Fariadabad">Fariadabad</option>
-                                    </select>
-                                </div>
-                                <div class="col-md-4">
-                                    <select class="form-select border-0 py-3" name="featured">
-                                        <option selected>Featured</option>
-                                        <option value="For Sell">For Sell</option>
-                                        <option value="For Rent">For Rent</option>
-                                    </select>
+                <div class="row g-0 gx-5 align-items-end">
+                    <div class="col-lg-6">
+                        <div class="text-start mx-auto mb-5 wow slideInLeft" data-wow-delay="0.1s">
+                            <h1 class="mb-3">Property Details</h1>
+                        </div>
+                    </div>
+                </div>
+                <div class="tab-content">
+                    <% if(PropertyDetails) { %>
+                        <div id="tab-1" class="tab-pane fade show p-0 active">
+                            <div class="row g-4">
+                                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
+                                    <div class="property-item rounded overflow-hidden">
+                                        <div class="position-relative overflow-hidden">
+                                            <img class="img-fluid"
+                                                    src="<%= 'static/img/' + PropertyDetails.images[0] %>"
+                                                    alt="">
+                                            <div
+                                                class="bg-primary rounded text-white position-absolute start-0 top-0 m-4 py-1 px-3">
+                                                <%= PropertyDetails.featured %>
+                                            </div>
+                                            <div
+                                                class="bg-white rounded-top text-primary position-absolute start-0 bottom-0 mx-4 pt-1 px-3">
+                                                <%= PropertyDetails.property_type %>
+                                            </div>
+                                        </div>
+                                        <div class="p-4 pb-0">
+                                            <h5 class="text-primary mb-3">
+                                                <%= PropertyDetails.price %>
+                                            </h5>
+                                            <a class="d-block h5 mb-2" href="">
+                                                <%= PropertyDetails.description %>
+                                            </a>
+                                            <p><i class="fa fa-map-marker-alt text-primary me-2"></i>
+                                                <%= PropertyDetails.house_no %>, <%= PropertyDetails.street %>, <%= PropertyDetails.area %>
+                                                <%= PropertyDetails.city %>, <%= PropertyDetails.state %>, <%= PropertyDetails.country %>,
+                                                <%= PropertyDetails.zipCode %>
+                                            </p>
+                                        </div>
+                                        <div class="d-flex border-top">
+                                            <small class="flex-fill text-center border-end py-2"><i
+                                                    class="fa fa-ruler-combined text-primary me-2"></i>
+                                                <%= PropertyDetails.sqrmeter %> Sqmeter
+                                            </small>
+                                            <small class="flex-fill text-center border-end py-2"><i
+                                                    class="fa fa-bed text-primary me-2"></i>
+                                                <%= PropertyDetails.bed %> Bed
+                                            </small>
+                                            <small class="flex-fill text-center py-2"><i
+                                                    class="fa fa-bath text-primary me-2"></i>
+                                                <%= PropertyDetails.bath %> Bath
+                                            </small>
+                                        </div>
+                                        <% if(owner) { %>
+                                            <div class="p-4 pb-0">
+                                                <h6 class="text-primary mb-3">
+                                                    Owner Name: <%= owner.name %>
+                                                </h6>
+                                                <h6 class="text-primary mb-3">
+                                                    Owner Email: <%= owner.email %>
+                                                </h6>
+                                                <h6 class="text-primary mb-3">
+                                                    Owner Phone No: <%= owner.mobile_no %>
+                                                </h6>
+                                            </div>
+                                        <% } %>
+                                        <div class="p-4 pb-0">
+                                            <h5 class="text-primary mb-3">
+                                                <%= PropertyDetails.property_status %>
+                                            </h5>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
-                        <div class="col-md-2">
-                            <button class="btn btn-dark border-0 w-100 py-3" type="submit" id="searchButton">Search</button>
-                        </div>
-                    </div>
-                </form>
-                <script>
-                    document.getElementById("searchButton").addEventListener("click", function () {
-                        window.location.href = "./property-list1?isUser=<%= encodeURIComponent(JSON.stringify(user)) %>";
-                    });
-                </script>
-            </div>
-        </div>
-        <!-- Search End -->
-
-
-        <!-- About Start -->
-        <div class="container-xxl py-5">
-            <div class="container">
-                <div class="row g-5 align-items-center">
-                    <div class="col-lg-6 wow fadeIn" data-wow-delay="0.1s">
-                        <div class="about-img position-relative overflow-hidden p-5 pe-0">
-                            <img class="img-fluid w-100" src="static/img/about.jpg">
-                        </div>
-                    </div>
-                    <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
-                        <h1 class="mb-4">#1 Place To Find The Perfect Property</h1>
-                        <p class="mb-4">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu diam amet diam et eos. Clita erat ipsum et lorem et sit, sed stet lorem sit clita duo justo magna dolore erat amet</p>
-                        <p><i class="fa fa-check text-primary me-3"></i>Tempor erat elitr rebum at clita</p>
-                        <p><i class="fa fa-check text-primary me-3"></i>Aliqu diam amet diam et eos</p>
-                        <p><i class="fa fa-check text-primary me-3"></i>Clita duo justo magna dolore erat amet</p>
-                        <a class="btn btn-primary py-3 px-5 mt-3" href="">Read More</a>
-                    </div>
+                    <% } %>
                 </div>
             </div>
         </div>
-        <!-- About End -->
+        <% if(PropertyDetails.property_status == "UNSOLD") { %>
+            <div>
+                <button style="font-weight: bold;
+                font-size: 20px;" class="btn btn-dark border-0 w-100 py-3" type="submit"
+                id="buyButton">Buy Now</button>
+            </div>
+        <% } %>
+
+        <script>
+            document.getElementById("buyButton").addEventListener("click", function() {
+                window.location.href = "./addBuyer/<%= PropertyDetails.id %>";
+            });
+        </script>
+
 
         <!-- Footer Start -->
         <div class="container-fluid bg-dark text-white-50 footer pt-5 mt-5 wow fadeIn" data-wow-delay="0.1s">
@@ -184,7 +183,7 @@
                 <div class="row g-5">
                     <div class="col-lg-3 col-md-6">
                         <h5 class="text-white mb-4">Get In Touch</h5>
-                        <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>123 Street, New York, USA</p>
+                        <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Sector 58, Noida, India</p>
                         <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+012 345 67890</p>
                         <p class="mb-2"><i class="fa fa-envelope me-3"></i>info@example.com</p>
                         <div class="d-flex pt-2">
@@ -228,10 +227,6 @@
                     <div class="col-lg-3 col-md-6">
                         <h5 class="text-white mb-4">Newsletter</h5>
                         <p>Dolor amet sit justo amet elitr clita ipsum elitr est.</p>
-                        <div class="position-relative mx-auto" style="max-width: 400px;">
-                            <input class="form-control bg-transparent w-100 py-3 ps-4 pe-5" type="text" placeholder="Your email">
-                            <button type="button" class="btn btn-primary py-2 position-absolute top-0 end-0 mt-2 me-2">SignUp</button>
-                        </div>
                     </div>
                 </div>
             </div>
@@ -239,10 +234,10 @@
                 <div class="copyright">
                     <div class="row">
                         <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                            &copy; <a class="border-bottom" href="#">Your Site Name</a>, All Right Reserved. 
-							
-							<!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
-							Designed By <a class="border-bottom" href="https://htmlcodex.com">HTML Codex</a>
+                            &copy; <a class="border-bottom" href="#">Your Site Name</a>, All Right Reserved.
+
+                            <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
+                            Designed By <a class="border-bottom" href="https://htmlcodex.com">HTML Codex</a>
                         </div>
                         <div class="col-md-6 text-center text-md-end">
                             <div class="footer-menu">
