--- a/real-estate-html-template/index.ejs
+++ b/real-estate-html-template/index.ejs
@@ -60,17 +60,17 @@
                 <div class="collapse navbar-collapse" id="navbarCollapse">
                     <div class="navbar-nav ms-auto">
                         <a href="" class="nav-item nav-link active">Home</a>
-                        <a href="./about" class="nav-item nav-link">About</a>
+                        <a href="./about1" class="nav-item nav-link">About</a>
                         <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Property</a>
                             <div class="dropdown-menu rounded-0 m-0">
-                                <a href="./property-list" class="dropdown-item">Property List</a>
+                                <a href="./getAllPropertys" class="dropdown-item">Property List</a>
                                 <a href="./property-type" class="dropdown-item">Property Type</a>
                             </div>
                         </div>
                         <a href="./contact" class="nav-item nav-link">Contact</a>
                     </div>
-                    <a href="./addProperty" class="btn btn-primary px-3 d-none d-lg-flex">Add Property</a>
+                    <a href="./getUserProperty" class="btn btn-primary px-3 d-none d-lg-flex">Add Property</a>
                 </div>
             </nav>
         </div>
@@ -164,57 +164,52 @@
                 </div>
                 <div class="row g-4">
                     <div class="col-lg-3 col-sm-6 wow fadeInUp" data-wow-delay="0.1s">
-                        <a class="cat-item d-block bg-light text-center rounded p-3" href="">
+                        <a class="cat-item d-block bg-light text-center rounded p-3" href="./getPropertyTypes1">
                             <div class="rounded p-4">
                                 <div class="icon mb-3">
                                     <img class="img-fluid" src="static/img/icon-apartment.png" alt="Icon">
                                 </div>
                                 <h6>Apartment</h6>
-                                <!-- <span>123 Properties</span> -->
                             </div>
                         </a>
                     </div>
                     <div class="col-lg-3 col-sm-6 wow fadeInUp" data-wow-delay="0.3s">
-                        <a class="cat-item d-block bg-light text-center rounded p-3" href="">
+                        <a class="cat-item d-block bg-light text-center rounded p-3" href="./getPropertyTypes2">
                             <div class="rounded p-4">
                                 <div class="icon mb-3">
                                     <img class="img-fluid" src="static/img/icon-villa.png" alt="Icon">
                                 </div>
                                 <h6>Villa</h6>
-                                <!-- <span>123 Properties</span> -->
                             </div>
                         </a>
                     </div>
                     <div class="col-lg-3 col-sm-6 wow fadeInUp" data-wow-delay="0.5s">
-                        <a class="cat-item d-block bg-light text-center rounded p-3" href="">
+                        <a class="cat-item d-block bg-light text-center rounded p-3" href="./getPropertyTypes3">
                             <div class="rounded p-4">
                                 <div class="icon mb-3">
                                     <img class="img-fluid" src="static/img/icon-house.png" alt="Icon">
                                 </div>
                                 <h6>Home</h6>
-                                <!-- <span>123 Properties</span> -->
                             </div>
                         </a>
                     </div>
                     <div class="col-lg-3 col-sm-6 wow fadeInUp" data-wow-delay="0.7s">
-                        <a class="cat-item d-block bg-light text-center rounded p-3" href="">
+                        <a class="cat-item d-block bg-light text-center rounded p-3" href="./getPropertyTypes4">
                             <div class="rounded p-4">
                                 <div class="icon mb-3">
                                     <img class="img-fluid" src="static/img/icon-housing.png" alt="Icon">
                                 </div>
                                 <h6>Office</h6>
-                                <!-- <span>123 Properties</span> -->
                             </div>
                         </a>
                     </div>
                     <div class="col-lg-3 col-sm-6 wow fadeInUp" data-wow-delay="0.5s">
-                        <a class="cat-item d-block bg-light text-center rounded p-3" href="">
+                        <a class="cat-item d-block bg-light text-center rounded p-3" href="./getPropertyTypes5">
                             <div class="rounded p-4">
                                 <div class="icon mb-3">
                                     <img class="img-fluid" src="static/img/icon-condominium.png" alt="Icon">
                                 </div>
                                 <h6>Shop</h6>
-                                <!-- <span>123 Properties</span> -->
                             </div>
                         </a>
                     </div>
@@ -260,20 +255,6 @@
                                 ipsum sit eirmod sit diam justo sed rebum.</p>
                         </div>
                     </div>
-                    <!-- <div class="col-lg-6 text-start text-lg-end wow slideInRight" data-wow-delay="0.1s">
-                        <ul class="nav nav-pills d-inline-flex justify-content-end mb-5">
-                            <li class="nav-item me-2">
-                                <a class="btn btn-outline-primary active" data-bs-toggle="pill"
-                                    href="#tab-1">Featured</a>
-                            </li>
-                            <li class="nav-item me-2">
-                                <a class="btn btn-outline-primary" data-bs-toggle="pill" href="#tab-2">For Sell</a>
-                            </li>
-                            <li class="nav-item me-0">
-                                <a class="btn btn-outline-primary" data-bs-toggle="pill" href="#tab-3">For Rent</a>
-                            </li>
-                        </ul>
-                    </div> -->
                 </div>
                 <div class="tab-content">
                     <div id="tab-1" class="tab-pane fade show p-0 active">
@@ -281,7 +262,7 @@
                             <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                                 <div class="property-item rounded overflow-hidden">
                                     <div class="position-relative overflow-hidden">
-                                        <a href=""><img class="img-fluid" src="static/img/property-1.jpg" alt=""></a>
+                                        <a href="./message2"><img class="img-fluid" src="static/img/property-1.jpg" alt=""></a>
                                         <div
                                             class="bg-primary rounded text-white position-absolute start-0 top-0 m-4 py-1 px-3">
                                             For Sell</div>
@@ -308,7 +289,7 @@
                             <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                                 <div class="property-item rounded overflow-hidden">
                                     <div class="position-relative overflow-hidden">
-                                        <a href=""><img class="img-fluid" src="static/img/property-2.jpg" alt=""></a>
+                                        <a href="./message2"><img class="img-fluid" src="static/img/property-2.jpg" alt=""></a>
                                         <div
                                             class="bg-primary rounded text-white position-absolute start-0 top-0 m-4 py-1 px-3">
                                             For Rent</div>
@@ -335,7 +316,7 @@
                             <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
                                 <div class="property-item rounded overflow-hidden">
                                     <div class="position-relative overflow-hidden">
-                                        <a href=""><img class="img-fluid" src="static/img/property-3.jpg" alt=""></a>
+                                        <a href="./message2"><img class="img-fluid" src="static/img/property-3.jpg" alt=""></a>
                                         <div
                                             class="bg-primary rounded text-white position-absolute start-0 top-0 m-4 py-1 px-3">
                                             For Sell</div>
@@ -362,7 +343,7 @@
                             <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                                 <div class="property-item rounded overflow-hidden">
                                     <div class="position-relative overflow-hidden">
-                                        <a href=""><img class="img-fluid" src="static/img/property-4.jpg" alt=""></a>
+                                        <a href="./message2"><img class="img-fluid" src="static/img/property-4.jpg" alt=""></a>
                                         <div
                                             class="bg-primary rounded text-white position-absolute start-0 top-0 m-4 py-1 px-3">
                                             For Rent</div>
@@ -416,7 +397,7 @@
                             <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
                                 <div class="property-item rounded overflow-hidden">
                                     <div class="position-relative overflow-hidden">
-                                        <a href=""><img class="img-fluid" src="static/img/property-6.jpg" alt=""></a>
+                                        <a href="./message2"><img class="img-fluid" src="static/img/property-6.jpg" alt=""></a>
                                         <div
                                             class="bg-primary rounded text-white position-absolute start-0 top-0 m-4 py-1 px-3">
                                             For Rent</div>
@@ -450,7 +431,7 @@
                             <div class="col-lg-4 col-md-6">
                                 <div class="property-item rounded overflow-hidden">
                                     <div class="position-relative overflow-hidden">
-                                        <a href=""><img class="img-fluid" src="static/img/property-1.jpg" alt=""></a>
+                                        <a href="./message2"><img class="img-fluid" src="static/img/property-1.jpg" alt=""></a>
                                         <div
                                             class="bg-primary rounded text-white position-absolute start-0 top-0 m-4 py-1 px-3">
                                             For Sell</div>
@@ -477,7 +458,7 @@
                             <div class="col-lg-4 col-md-6">
                                 <div class="property-item rounded overflow-hidden">
                                     <div class="position-relative overflow-hidden">
-                                        <a href=""><img class="img-fluid" src="static/img/property-2.jpg" alt=""></a>
+                                        <a href="./message2"><img class="img-fluid" src="static/img/property-2.jpg" alt=""></a>
                                         <div
                                             class="bg-primary rounded text-white position-absolute start-0 top-0 m-4 py-1 px-3">
                                             For Rent</div>
@@ -504,7 +485,7 @@
                             <div class="col-lg-4 col-md-6">
                                 <div class="property-item rounded overflow-hidden">
                                     <div class="position-relative overflow-hidden">
-                                        <a href=""><img class="img-fluid" src="static/img/property-3.jpg" alt=""></a>
+                                        <a href="./message2"><img class="img-fluid" src="static/img/property-3.jpg" alt=""></a>
                                         <div
                                             class="bg-primary rounded text-white position-absolute start-0 top-0 m-4 py-1 px-3">
                                             For Sell</div>
@@ -531,7 +512,7 @@
                             <div class="col-lg-4 col-md-6">
                                 <div class="property-item rounded overflow-hidden">
                                     <div class="position-relative overflow-hidden">
-                                        <a href=""><img class="img-fluid" src="static/img/property-4.jpg" alt=""></a>
+                                        <a href="./message2"><img class="img-fluid" src="static/img/property-4.jpg" alt=""></a>
                                         <div
                                             class="bg-primary rounded text-white position-absolute start-0 top-0 m-4 py-1 px-3">
                                             For Rent</div>
@@ -558,7 +539,7 @@
                             <div class="col-lg-4 col-md-6">
                                 <div class="property-item rounded overflow-hidden">
                                     <div class="position-relative overflow-hidden">
-                                        <a href=""><img class="img-fluid" src="static/img/property-5.jpg" alt=""></a>
+                                        <a href="./message2"><img class="img-fluid" src="static/img/property-5.jpg" alt=""></a>
                                         <div
                                             class="bg-primary rounded text-white position-absolute start-0 top-0 m-4 py-1 px-3">
                                             For Sell</div>
@@ -585,7 +566,7 @@
                             <div class="col-lg-4 col-md-6">
                                 <div class="property-item rounded overflow-hidden">
                                     <div class="position-relative overflow-hidden">
-                                        <a href=""><img class="img-fluid" src="static/img/property-6.jpg" alt=""></a>
+                                        <a href="./message2"><img class="img-fluid" src="static/img/property-6.jpg" alt=""></a>
                                         <div
                                             class="bg-primary rounded text-white position-absolute start-0 top-0 m-4 py-1 px-3">
                                             For Rent</div>
@@ -619,7 +600,7 @@
                             <div class="col-lg-4 col-md-6">
                                 <div class="property-item rounded overflow-hidden">
                                     <div class="position-relative overflow-hidden">
-                                        <a href=""><img class="img-fluid" src="static/img/property-1.jpg" alt=""></a>
+                                        <a href="./message2"><img class="img-fluid" src="static/img/property-1.jpg" alt=""></a>
                                         <div
                                             class="bg-primary rounded text-white position-absolute start-0 top-0 m-4 py-1 px-3">
                                             For Sell</div>
@@ -646,7 +627,7 @@
                             <div class="col-lg-4 col-md-6">
                                 <div class="property-item rounded overflow-hidden">
                                     <div class="position-relative overflow-hidden">
-                                        <a href=""><img class="img-fluid" src="static/img/property-2.jpg" alt=""></a>
+                                        <a href="./message2"><img class="img-fluid" src="static/img/property-2.jpg" alt=""></a>
                                         <div
                                             class="bg-primary rounded text-white position-absolute start-0 top-0 m-4 py-1 px-3">
                                             For Rent</div>
@@ -673,7 +654,7 @@
                             <div class="col-lg-4 col-md-6">
                                 <div class="property-item rounded overflow-hidden">
                                     <div class="position-relative overflow-hidden">
-                                        <a href=""><img class="img-fluid" src="static/img/property-3.jpg" alt=""></a>
+                                        <a href="./message2"><img class="img-fluid" src="static/img/property-3.jpg" alt=""></a>
                                         <div
                                             class="bg-primary rounded text-white position-absolute start-0 top-0 m-4 py-1 px-3">
                                             For Sell</div>
@@ -700,7 +681,7 @@
                             <div class="col-lg-4 col-md-6">
                                 <div class="property-item rounded overflow-hidden">
                                     <div class="position-relative overflow-hidden">
-                                        <a href=""><img class="img-fluid" src="static/img/property-4.jpg" alt=""></a>
+                                        <a href="./message2"><img class="img-fluid" src="static/img/property-4.jpg" alt=""></a>
                                         <div
                                             class="bg-primary rounded text-white position-absolute start-0 top-0 m-4 py-1 px-3">
                                             For Rent</div>
@@ -727,7 +708,7 @@
                             <div class="col-lg-4 col-md-6">
                                 <div class="property-item rounded overflow-hidden">
                                     <div class="position-relative overflow-hidden">
-                                        <a href=""><img class="img-fluid" src="static/img/property-5.jpg" alt=""></a>
+                                        <a href="./message2"><img class="img-fluid" src="static/img/property-5.jpg" alt=""></a>
                                         <div
                                             class="bg-primary rounded text-white position-absolute start-0 top-0 m-4 py-1 px-3">
                                             For Sell</div>
@@ -754,7 +735,7 @@
                             <div class="col-lg-4 col-md-6">
                                 <div class="property-item rounded overflow-hidden">
                                     <div class="position-relative overflow-hidden">
-                                        <a href=""><img class="img-fluid" src="static/img/property-6.jpg" alt=""></a>
+                                        <a href="./message2"><img class="img-fluid" src="static/img/property-6.jpg" alt=""></a>
                                         <div
                                             class="bg-primary rounded text-white position-absolute start-0 top-0 m-4 py-1 px-3">
                                             For Rent</div>
